--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,27 @@ transform: scale(0.94);
 animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
 }
 
+.loginButton{
+    font-size: 20px;
+    margin-top: 26px;
+    height: 45px;
+    border-radius: 16px;
+    border-color: white;
+    width: 90px;
+}
+
+.loginButton:hover{
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.signupbutton{
+    border: 0;
+    cursor: pointer;
+    text-decoration: underline;
+    font-size: 15px;
+}
+
 .heading{
     width: 50%;
     left : 0;
@@ -26,6 +47,7 @@ animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
 }
 
 .form{
+    font-size: 20px;
     float: right;
     display: inline-block;
     margin-right:78px ;
